# anywise

./: .gitignore  404.html  CHANGELOG.md  README.md  ROADMAP.md  docs.md  hello.py  index.html  makefile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  makedocs.yml
anywise/: Interface.py  __init__.py  _cli.py  _ds.py  _itypes.py  _registry.py  _type_resolve.py  _visitor.py  actor.py  anywise.py  bus.py  errors.py  guard.py  handler.py  main.py  mark.py  publisher.py  query.py  registry.py  runtime.py  strategies.py
anywise/demo/: __init__.py  app.py  db.py  model.py  todo.py
anywise/events/: __init__.py  eventstore.py  model.py  table.py
anywise/integration/: fastapi.py
anywise/messages/: __init__.py  eventstore.py  model.py  table.py
anywise/port/: sink.py
anywise/sink/: __init__.py  sink.py
anywise/source/: __init__.py  aws.py  grpc.py  source.py
anywise/utils/: ds.py  message_meta.py  query.py  statsh.py
architecture/: index.html
architectures/ddd/: index.html
architectures/microservice/: index.html
architectures/sink/: index.html
architectures/source/: index.html
architectures/sss_architecture/: index.html
demo/: README.md  __init__.py  __main__.py  api.py  db.db  db.py  event.py  message.py  model.py  table.py  todo.py
docs/: architecture.md  ddd.md  features.md  index.md  microservice.md  roadmap.md  sss_architecture.md  tutorial.md
docs/architectures/: source.md
features/: index.html
roadmap/: index.html
search/: search_index.json
tests/: conftest.py  test_anywise.py  test_async.py  test_bus.py  test_ds.py  test_eventsink.py  test_feat.py  test_guard.py  test_message_registry.py  test_send.py  test_visitor.py
tests/feats/: test_guard.py  test_inspect.py  test_message_registry.py  test_visitor.py
tutorial/: index.html
