[project]
authors = [{ name = "raceychan", email = "raceychan@gmail.com" }]
dependencies = ["ididi>=1.2.1"]
description = "Anywise let you write your application anywise"
dynamic = ["version"]
name = "anywise"
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "anywise/__init__.py"

[tool.pyright]
exclude = ["tests"]
include = ["anywise/*.py"]
python_version = "3.12"
typeCheckingMode = "strict"

[tool.coverage.run]
omit = [
  # omit anything in a .local directory anywhere
  "anywise/utils/*",
  "anywise/messages/*",
  "anywise/integration/*"
]


[tool.pytest.ini_options]
addopts = "-vx --strict-markers --capture=no"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "fastapi>=0.115.6",
    "pytest-asyncio>=0.25.0",
    "pytest-cov >=4.1.0",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "aiosqlite>=0.20.0",
    "hatch>=1.14.0",
    "pyright>=1.1.391",
    "loguru>=0.7.3",
    "msgspec>=0.18.6",
    "mkdocs-material[imaging]>=9.5.49",
    "pillow>=10.4.0",
    "cairosvg>=2.7.1",
]
